# elaws-xml

./: .gitattributes  .gitignore  .tool-versions  import_map.json  main.ts  wip.ts
docs/: all_law_list.csv  index.html  index.json
docs/xml/: 105DF0000000337_20150801_000000000000000.xml  106DF0000000065_20150801_000000000000000.xml  108DF0000000054_20150801_000000000000000.xml  108DF0000000103_20150801_000000000000000.xml  108DT0000000152_20150801_000000000000000.xml  110DT0000000097.xml  110DT0000000097_20150801_000000000000000.xml  113DF0000000036_20150801_000000000000000.xml  114DF0000000063_20150801_000000000000000.xml  116DT0000000027_20150801_000000000000000.xml  117DF1000000032_20170810_429AC0000000067.xml  119IO0000000000_20150801_000000000000000.xml  119IO0000000051_20150801_000000000000000.xml  120IO0000000001_20150801_000000000000000.xml  120IO0000000002_20150801_000000000000000.xml  120IO0000000039_19470502_322IO0000000206.xml  121IO0000000001_20150801_000000000000000.xml  121IO0000000076_20150801_000000000000000.xml  122AC0000000034_20150801_000000000000000.xml  122IO0000000103_20150801_000000000000000.xml  122M10000001012_20161001_000000000000000.xml  122M10000001019_20161001_000000000000000.xml  123AC0000000001_20150801_000000000000000.xml  125M10000001004_20161001_000000000000000.xml  126IO0000000261_20150801_000000000000000.xml  127IO0000000023_20150801_000000000000000.xml  127M10000001001_20161001_000000000000000.xml  131AC0000000014.xml  (+9910 more)
parse-index/: Cargo.toml
parse-index/src/: main.rs
scrape/: buildIndex.ts  list.ts  main.ts
